--- a/tutorial/templates/tutorial/usuario_nuevo.html
+++ b/tutorial/templates/tutorial/usuario_nuevo.html
@@ -4,31 +4,73 @@
 <form method="POST">
   {% csrf_token %}
   <div class="form-group">
-    <label>Subject</label>
-    <input class="form-control" name="ev-subject" type="text">
+    <label>city</label>
+    <input class="form-control" name="ev-city" type="text">
   </div>
   <div class="form-group">
-    <label>Attendees</label>
-    <input class="form-control" name="ev-attendees" type="text"
+    <label>country</label>
+    <input class="form-control" name="ev-country" type="text">
+  </div>
+  <div class="form-group">
+    <label>department</label>
+    <input class="form-control" name="ev-department" type="text">
+  </div>
+  <div class="form-group">
+    <label>displayName</label>
+    <input class="form-control" name="ev-displayName" type="text">
+  </div>
+  <div class="form-group">
+    <label>givenName</label>
+    <input class="form-control" name="ev-givenName" type="text">
+  </div>
+  <div class="form-group">
+    <label>jobTitle</label>
+    <input class="form-control" name="ev-jobTitle" type="text">
+  </div>
+  <div class="form-group">
+    <label>mailNickname</label>
+    <input class="form-control" name="ev-mailNickname" type="text">
+  </div>
+  <div class="form-group">
+    <label>password</label>
+    <input class="form-control" name="ev-password" type="text">
+  </div>
+  <div class="form-group">
+    <label>officeLocation</label>
+    <input class="form-control" name="ev-officeLocation" type="text">
+  </div>
+  <div class="form-group">
+    <label>postalCode</label>
+    <input class="form-control" name="ev-postalCode" type="text">
+  </div>
+  <div class="form-group">
+    <label>preferredLanguage</label>
+    <input class="form-control" name="ev-preferredLanguage" type="text">
+  </div>
+  <div class="form-group">
+    <label>state</label>
+    <input class="form-control" name="ev-state" type="text">
+  </div>
+  <div class="form-group">
+    <label>streetAddress</label>
+    <input class="form-control" name="ev-streetAddress" type="text">
+  </div>
+  <div class="form-group">
+    <label>surname</label>
+    <input class="form-control" name="ev-surname" type="text">
+  </div>
+  <div class="form-group">
+    <label>mobilePhone</label>
+    <input class="form-control" name="ev-mobilePhone" type="text">
+  </div>
+  <div class="form-group">
+    <label>usageLocation</label>
+    <input class="form-control" name="ev-usageLocation" type="text">
+  </div>
+  <div class="form-group">
+    <label>userPrincipalName</label>
+    <input class="form-control" name="ev-userPrincipalName" type="text"
       placeholder="Separate multiple email addresses with a semicolon (';')">
-  </div>
-  <div class="form-row">
-    <div class="col">
-      <div class="form-group">
-        <label>Start</label>
-        <input class="form-control" name="ev-start" type="datetime-local">
-      </div>
-    </div>
-    <div class="col">
-      <div class="form-group">
-        <label>End</label>
-        <input class="form-control" name="ev-end" type="datetime-local">
-      </div>
-    </div>
-  </div>
-  <div class="form-group mb-3">
-    <label>Body</label>
-    <textarea class="form-control" name="ev-body" rows="3"></textarea>
   </div>
   <input class="btn btn-primary mr-2" type="submit" value="Create" />
   <a class="btn btn-secondary" href="/calendar">Cancel</a>
